# bifabrik

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pipx_shared.pth  pyproject.toml
docs/: Makefile  README.md  _config.yml  conf.py  example.ipynb  index.md  make.bat
docs/_layouts/: default.html
docs/src/bifabrik/: DataLoader.md  bifabrik.md  index.md
docs/src/bifabrik/cfg/: Configuration.md  index.md
docs/src/bifabrik/dst/: DataDestination.md  TableDestination.md  index.md
docs/src/bifabrik/src/: CsvSource.md  DataSource.md  JsonSource.md  SqlSource.md  index.md
docs/tutorial/: cfg_storage.md  configuration.md  dst_spark_df.md  dst_table.md  dst_warehouse_table.md  lineage.md  msc_files_archive.md  quickstart.md  src_csv.md  src_jdbc.md  src_json.md  src_other.md  src_spark_df.md  src_sql.md  src_warehouse_sql  src_warehouse_sql.md  tsf_spark_df.md  tsf_validation.md  util_api.md  util_fs.md  util_log.md  util_table.md  util_tmsl.md
docsmd/: README.md  _config.yml
docsmd/src/bifabrik/: DataLoader.md  bifabrik.md  index.md
docsmd/src/bifabrik/cfg/: Configuration.md  index.md
docsmd/src/bifabrik/dst/: DataDestination.md  TableDestination.md  index.md
docsmd/src/bifabrik/src/: CsvSource.md  (+4 more)
src/bifabrik/: DataLoader.py  __init__.py  bifabrik.py
src/bifabrik/base/: DataLoader copy 2.py  Pipeline.py  Task.py
src/bifabrik/cfg/: CompleteConfiguration.py  CsvSourceConfiguration.py  DataDestinationConfigurationBase.py  DataSourceConfigurationBase.py  ExcelSourceConfiguration.py  GlobalConfiguration.py  JdbcSourceConfiguration.py  JsonSourceConfiguration.py  LineageConfigurationContainer.py  SharePointListSourceConfiguration.py  TableDestinationConfiguration.py  ValidationTransformationConfiguration.py
src/bifabrik/dst/: CommonDestinationUtils.py  DataDestination.py  LakehouseTableDestination.py  PandasDfDestination.py  SparkDfDestination.py  TableDestination.py  WarehouseTableDestination.py
src/bifabrik/src/: CsvSource.py  DataSource.py  ExcelSource.py  JdbcSource.py  JsonSource.py  PandasDfSource.py  SharePointListSource.py  SparkDfSource.py  SparkSqlSource.py  SqlSource.py  WarehouseSqlSource.py  csv.py
src/bifabrik/tsf/: DataTransformation.py  PandasDfTransformation.py  SparkDfTransformation.py  ValidationTransformation.py
src/bifabrik/utils/: api.py  fsUtils.py  log.py  tableUtils.py  tmslUtils.py
tests/: test_bifabrik.py
(+25 files in other folders)
