[tool.poetry]
name = "bifabrik"
version = "0.12.4"
description = "Microsoft Fabric ETL toolbox"
authors = ["Radovan Jankovič <jankovic.rj@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://rjankovic.github.io/bifabrik/"
documentation = "https://rjankovic.github.io/bifabrik/"
repository = "https://github.com/rjankovic/bifabrik/"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
glob2 = ">=0.7"
pandas = ">=2.0"
semantic-link = ">=0.7.7"
SharePlum = ">=0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
